# dynamodb-dax-benchmarker

./: .gitignore  .golangci.yml  Cargo.toml  Makefile  README.md  ansible.cfg  benchmarker.sh  go.mod  go.sum
ansible/: README.md  deploy_benchmarker.yml  run_benchmarkers.yml
ansible/inventories/local/: hosts.yml
ansible/inventories/local/host_vars/: localhost.yml
ansible/roles/configure_elastic_stack/files/: benchmarker-dashboards.ndjson
ansible/roles/configure_elastic_stack/tasks/: init_elk_stack.yml  main.yml  stop_elk_stack.yml
ansible/roles/deploy_cdk/tasks/: main.yml
ansible/roles/destroy/tasks/: main.yml
ansible/roles/install_prerequisites/tasks/: apt.yml  aws_cli.yml  go.yml  main.yml  node.yml  rust.yml
cdk/: README.md  cdk.json  package.json
cdk/lib/: bastion-host.ts  dax-benchmarking-stack.ts  dynamodb.ts  types.ts
pkg/app/: main.go
pkg/models/: models.go
pkg/simulators/: operations.go  simulations.go  utils.go
pkg/utils/: utils.go
scripts/: logger.sh  randomly-generate-high-velocity-data.sh  ui_utils.sh
src/: main.rs  timer_utils.rs
src/models/: mod.rs
src/simulators/: assertions.rs  mod.rs  operations.rs  utils.rs
